--- a/html/SS22.html
+++ b/html/SS22.html
@@ -1,84 +1,113 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="../css/style.css">
-     <title>Coleccion</title>
- </head>
- <body class="body">
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/8def71428e.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Coleccion</title>
+  </head>
+  <body class="body">
     <header>
-        <h1>FVCK</h1>
+      <div class="h1">
+        <h1><a href="../index.html">FVCK</a></h1>
+      </div>
+
+      <div class="nav__menu">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="menu"><img src="../imagenes/bars-solid.svg" alt="" /></i>
+        </label>
+
+        <ul>
+          <li class="index"><a href="../index.html">INICIO</a></li>
+          <li class="li"><a href="./hombre.html">HOMBRE</a></li>
+          <li class="li"><a href="./mujer.html">MUJER</a></li>
+          <li class="li"><a href="./SS22.html">SS22</a></li>
+          <li class="li"><a href="./contacto.html">CONTACTO</a></li>
+        </ul>
+      </div>
     </header>
 
-    <nav>
-        <ul>
-            <li class="index"><a href="../index.html">INICIO</a></li>
-            <li class="li"><a href="./hombre.html">HOMBRE</a></li>
-            <li class="li"><a href="./mujer.html">MUJER</a></li>
-            <li class="li"><a href="./SS22.html">SS22</a></li>
-            <li class="li"><a href="./contacto.html">CONTACTO</a></li>
-        </ul>
-    </nav>
-
     <main class="ss">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/78wHAsOPNRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/78wHAsOPNRs"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
     </main>
 
     <h2 class="h2">TEMPORADA DE PRIMAVERA</h2>
 
     <div class="div1">
-        <div class="div2">
-            <div class="foto">
-                <a href="#">
-                    <img src="../imagenes/ss22/ss1.jpg" alt="ss1">
-                </a>
-            </div>
-            <div class="texto1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, veniam.</p>
-            </div>
+      <div class="div2">
+        <div class="foto">
+          <a href="#">
+            <img src="../imagenes/ss22/ss1.jpg" alt="ss1" />
+          </a>
         </div>
-        <div class="div2">
-            <div class="foto">
-                <a href="#">
-                    <img src="../imagenes/ss22/ss2.jpg" alt="ss2">
-                </a>
-            </div>
-            <div class="texto1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, veniam.</p>
-            </div>
+        <div class="texto1">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            veniam.
+          </p>
         </div>
-        <div class="div2">
-            <div class="foto">
-                <a href="#">
-                    <img src="../imagenes/ss22/ss3.jpg" alt="ss3">
-                </a>
-            </div>
-            <div class="texto1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, veniam.</p>
-            </div>
+      </div>
+      <div class="div2">
+        <div class="foto">
+          <a href="#">
+            <img src="../imagenes/ss22/ss2.jpg" alt="ss2" />
+          </a>
         </div>
-        <div class="div2">
-            <div class="foto">
-                <a href="#">
-                    <img src="../imagenes/ss22/ss4.jpg" alt="ss4">
-                </a>
-            </div>
-            <div class="texto1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, veniam.</p>
-            </div>
+        <div class="texto1">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            veniam.
+          </p>
         </div>
+      </div>
+      <div class="div2">
+        <div class="foto">
+          <a href="#">
+            <img src="../imagenes/ss22/ss3.jpg" alt="ss3" />
+          </a>
+        </div>
+        <div class="texto1">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            veniam.
+          </p>
+        </div>
+      </div>
+      <div class="div2">
+        <div class="foto">
+          <a href="#">
+            <img src="../imagenes/ss22/ss4.jpg" alt="ss4" />
+          </a>
+        </div>
+        <div class="texto1">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            veniam.
+          </p>
+        </div>
+      </div>
     </div>
-    
-    <footer>
-        <ul>
-            <li><a href="./html/contacto.html">Contacto</a></li>
-            <li><a href="#">Terminos Y Condiciones</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-        </ul>
-    </footer>
 
- </body>
- </html>
+    <footer>
+      <ul>
+        <li><a href="./html/contacto.html">Contacto</a></li>
+        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+      </ul>
+    </footer>
+  </body>
+</html>
