--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/8def71428e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Contacto</title>
-</head>
-<body class="body">
-
+  </head>
+  <body class="body">
     <header>
-        <h1>FVCK</h1>
+      <div class="h1">
+        <h1><a href="../index.html">FVCK</a></h1>
+      </div>
+      <div class="nav__menu">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="menu"><img src="../imagenes/bars-solid.svg" alt="" /></i>
+        </label>
+
+        <ul>
+          <li class="index"><a href="../index.html">INICIO</a></li>
+          <li class="li"><a href="./hombre.html">HOMBRE</a></li>
+          <li class="li"><a href="./mujer.html">MUJER</a></li>
+          <li class="li"><a href="./SS22.html">SS22</a></li>
+          <li class="li"><a href="./contacto.html">CONTACTO</a></li>
+        </ul>
+      </div>
     </header>
 
-    <nav>
-        <ul>
-            <li class="index"><a href="../index.html">INICIO</a></li>
-            <li class="li"><a href="./hombre.html">HOMBRE</a></li>
-            <li class="li"><a href="./mujer.html">MUJER</a></li>
-            <li class="li"><a href="./SS22.html">SS22</a></li>
-            <li class="li"><a href="./contacto.html">CONTACTO</a></li>
-        </ul>
-    </nav>
-
     <form>
-        <h2>UNITE A NUESTRO EQUIPO</h2>    
-        <input class="texto" type="text" placeholder="Nombre" required>
-        <input class="texto" type="text" placeholder="Apellido" required>
-        <input class="texto" type="email" placeholder="Correo" required>
-        <input class="texto" type="date" required>
-        Masculino<input class="sexo" type="radio" name="sexo" required>
-        Femenino<input class="sexo" type="radio" name="sexo" required>
-        No Especificar<input class="sexo" type="radio" name="sexo" required>
-        <input class="enviar" type="submit">
+      <div>
+        <h2>UNITE A NUESTRO EQUIPO</h2>
+        <input class="texto" type="text" placeholder="Nombre" required />
+        <input class="texto" type="text" placeholder="Apellido" required />
+        <input class="texto" type="email" placeholder="Correo" required />
+        <input class="texto" type="date" required />
+        Masculino<input class="sexo" type="radio" name="sexo" required />
+        Femenino<input class="sexo" type="radio" name="sexo" required /> No
+        Especificar<input class="sexo" type="radio" name="sexo" required />
+        <input class="enviar" type="submit" />
+      </div>
     </form>
-    
-    <footer>
-        <ul>
-            <li><a href="./contacto.html">Contacto</a></li>
-            <li><a href="#">Terminos Y Condiciones</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-        </ul>
-    </footer>
 
-</body>
+    <footer>
+      <ul>
+        <li><a href="./contacto.html">Contacto</a></li>
+        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
