--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>FVCK</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <header>
-        <h1>FVCK</h1>
+      <div class="h1">
+        <h1><a href="./index.html">FVCK</a></h1>
+      </div>
+      <div class="nav__menu">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="menu"><img src="./imagenes/bars-solid.svg" alt="" /></i>
+        </label>
+
+        <ul>
+          <li class="index"><a href="../index.html">INICIO</a></li>
+          <li class="li"><a href="./html/hombre.html">HOMBRE</a></li>
+          <li class="li"><a href="./html/mujer.html">MUJER</a></li>
+          <li class="li"><a href="./html/SS22.html">SS22</a></li>
+          <li class="li"><a href="./html/contacto.html">CONTACTO</a></li>
+        </ul>
+      </div>
     </header>
 
-    <nav>
-        <ul>
-            <li class="index"><a href="../index.html">INICIO</a></li>
-            <li class="li"><a href="./html/hombre.html">HOMBRE</a></li>
-            <li class="li"><a href="./html/mujer.html">MUJER</a></li>
-            <li class="li"><a href="./html/SS22.html">SS22</a></li>
-            <li class="li"><a href="./html/contacto.html">CONTACTO</a></li>
-        </ul>
-    </nav>
-
     <section class="banner">
-        <div class="coleccion">
-            <a href="./html/SS22.html">PRIMAVERA SS22'</a>
-            <p>UNA COLLEZIONE UNICA</p>
-        </div>
+      <div class="coleccion">
+        <a href="./html/SS22.html">PRIMAVERA SS22'</a>
+        <p>UNA COLLEZIONE UNICA</p>
+      </div>
     </section>
-    
+
     <footer>
-        <ul>
-            <li><a href="./html/contacto.html">Contacto</a></li>
-            <li><a href="#">Terminos Y Condiciones</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-        </ul>
+      <ul>
+        <li><a href="./html/contacto.html">Contacto</a></li>
+        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+      </ul>
     </footer>
-    
-</body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
