--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,46 +4,109 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/8def71428e.js"
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
-    ></script>
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Contacto</title>
   </head>
   <body class="body">
     <header>
-      <div class="h1">
-        <h1><a href="../index.html">FVCK</a></h1>
-      </div>
-      <div class="nav__menu">
-        <input type="checkbox" id="check" />
-        <label for="check" class="checkbtn">
-          <i class="menu"><img src="../imagenes/bars-solid.svg" alt="" /></i>
-        </label>
-
-        <ul>
-          <li class="index"><a href="../index.html">INICIO</a></li>
-          <li class="li"><a href="./hombre.html">HOMBRE</a></li>
-          <li class="li"><a href="./mujer.html">MUJER</a></li>
-          <li class="li"><a href="./SS22.html">SS22</a></li>
-          <li class="li"><a href="./contacto.html">CONTACTO</a></li>
-        </ul>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="../index.html">FVCK</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html"
+                >INICIO <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./hombre.html">HOMBRE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./mujer.html">MUJER</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./SS22.html">SS22</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <form>
-      <div>
-        <h2>UNITE A NUESTRO EQUIPO</h2>
-        <input class="texto" type="text" placeholder="Nombre" required />
-        <input class="texto" type="text" placeholder="Apellido" required />
-        <input class="texto" type="email" placeholder="Correo" required />
-        <input class="texto" type="date" required />
-        Masculino<input class="sexo" type="radio" name="sexo" required />
-        Femenino<input class="sexo" type="radio" name="sexo" required /> No
-        Especificar<input class="sexo" type="radio" name="sexo" required />
-        <input class="enviar" type="submit" />
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputEmail4">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="inputEmail4"
+            placeholder="Email"
+          />
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputPassword4">Contraseña</label>
+          <input type="password" class="form-control" id="inputPassword4" />
+        </div>
       </div>
+      <div class="form-group">
+        <label for="inputAddress">Direccion</label>
+        <input type="text" class="form-control" id="inputAddress" />
+      </div>
+      <div class="form-group">
+        <label for="inputAddress2">Telefono</label>
+        <input type="text" class="form-control" id="inputAddress2" />
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputCity">Provincia</label>
+          <input type="text" class="form-control" id="inputCity" />
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputState">Ciudad</label>
+          <select id="inputState" class="form-control">
+            <option selected>Selecciona</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputZip">Codigo Postal</label>
+          <input type="text" class="form-control" id="inputZip" />
+        </div>
+      </div>
+      <div class="custom-file">
+        <label for="input"></label>
+        <input
+          type="file"
+          class="custom-file-input"
+          id="validatedCustomFile"
+          required
+        />
+        <label class="custom-file-label" for="validatedCustomFile"
+          >Selecciona tu CV...</label
+        >
+        <div class="invalid-feedback">Example invalid custom file feedback</div>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 
     <footer>
@@ -53,5 +116,21 @@
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
