--- a/html/SS22.html
+++ b/html/SS22.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La coleccion de invierno del 2022" />
+    <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE MUJER, ROPA DE HOMBRE, COLECCION DE ROPA, ROPA DE INVIERNO" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -11,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Coleccion</title>
+    <title>Coleccion de Invierno</title>
   </head>
   <body class="body">
     <header>
