--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina de contacto de FVCK" />
+    <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE MUJER, COLECCION DE ROPA, ROPA DE INVIERNO" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
