--- a/html/hombre.html
+++ b/html/hombre.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La coleccion de moda de hombre, temporada de invierno 2022" />
+    <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE HOMBRE, COLECCION DE ROPA, ROPA DE INVIERNO" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -11,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Hombre</title>
+    <title>Ropa de Hombre</title>
   </head>
   <body class="body">
     <header>
@@ -75,7 +77,7 @@
       </div>
     </section>
 
-    <h3 class="h3_hombre">SECCIONES</h3>
+    <h2 class="h2_hombre">SECCIONES</h2>
 
     <section class="tarjeta_hombre">
       <div class="galeria" style="--i: url(../imagenes/hombre/abrigo.jpg)">
