--- a/html/SS22.html
+++ b/html/SS22.html
@@ -65,24 +65,40 @@
     <h2 class="h2_ss">SPRING SEASON</h2>
 
     <section class="tarjeta_ss">
-      <div class="galeria" style="--i: url(../imagenes/ss22/ss1.jpg)">
+      <div class="cartas">
+        <figure>
+          <img src="../imagenes/ss22/ss1.jpg" alt="" />
+        </figure>
         <div class="texto">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
+          <a href="#">Read More</a>
         </div>
       </div>
-      <div class="galeria" style="--i: url(../imagenes/ss22/ss2.jpg)">
+      <div class="cartas">
+        <figure>
+          <img src="../imagenes/ss22/ss2.jpg" alt="" />
+        </figure>
         <div class="texto">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
+          <a href="#">Read More</a>
         </div>
       </div>
-      <div class="galeria" style="--i: url(../imagenes/ss22/ss3.jpg)">
+      <div class="cartas">
+        <figure>
+          <img src="../imagenes/ss22/ss3.jpg" alt="" />
+        </figure>
         <div class="texto">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
+          <a href="#">Read More</a>
         </div>
       </div>
-      <div class="galeria" style="--i: url(../imagenes/ss22/ss4.jpg)">
+      <div class="cartas">
+        <figure>
+          <img src="../imagenes/ss22/ss4.jpg" alt="" />
+        </figure>
         <div class="texto">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
+          <a href="#">Read More</a>
         </div>
       </div>
     </section>
