--- a/html/hombre.html
+++ b/html/hombre.html
@@ -61,14 +61,12 @@
             <img class="d-block w-100" src="../imagenes/hombre/hombre.jpg" alt="First slide" />
             <div class="carousel-caption d-md-block">
               <h2><a href="#">MEN COLLECTION</a></h2>
-              <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="../imagenes/hombre/hombre1.jpg" alt="Second slide" />
             <div class="carousel-caption d-md-block">
               <h2><a href="#">MEN COLLECTION</a></h2>
-              <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
         </div>
@@ -113,7 +111,7 @@
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/ropainterior.jpg)">
         <div class="texto">
-          <a href="#">UNDERWEAR</a>
+          <a href="#">UNDERWEAR</
         </div>
       </div>
     </section>
